I tried to had html and css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/reset.css">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Timed Quiz, Stinky!</title>
 </head>
 <body>
-    
+    <header >
+        <h1>Time to Quiz bb</h1>
+        <button>Start Quiz</button>
+        <h2>Time left:</h2>
+
+    </header>
+    <main>
+        <section>
+<div class="questions">
+<p>shitted and farted</p>
+</div>
+        </section>
+        <section>
+<div class="answers">
+    <ul>1</ul>
+    <ul>2</ul>
+    <ul>3</ul>
+    <ul>4</ul>
+    <hr>
+</div>
+        </section>
+    </main>
 </body>
-</html>
+</html> 
