--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,28 +9,33 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>Timed Quiz, Stinky!</title>
 </head>
+
 <body>
-    <header >
-        <h1>Time to Quiz bb</h1>
-        <button>Start Quiz</button>
-        <h2>Time left:</h2>
+    <header>
+        <h1>Time to Quiz</h1>
+        <button id="quizstart">Start Quiz</button>
+        <a href="score.html">
+            <button>Highscores</button></a>
+        <div id="timestamp"></div>
 
     </header>
     <main>
         <section>
-<div class="questions">
-<p>shitted and farted</p>
-</div>
+            <div class="questions">
+                <p>questions</p>
+            </div>
         </section>
         <section>
-<div class="answers">
-    <ul>1</ul>
-    <ul>2</ul>
-    <ul>3</ul>
-    <ul>4</ul>
-    <hr>
-</div>
+            <div class="answers">
+                <ul>1</ul>
+                <ul>2</ul>
+                <ul>3</ul>
+                <ul>4</ul>
+                <hr>
+            </div>
         </section>
     </main>
+    <script src="./assets/script.js"></script>
 </body>
-</html> 
+
+</html>
