--- a/index.html
+++ b/index.html
@@ -11,30 +11,22 @@
 </head>
 
 <body>
-    <header>
-        <h1>Time to Quiz</h1>
-        <button id="quizstart">Start Quiz</button>
-        <a href="score.html">
-            <button>Highscores</button></a>
-        <div id="timestamp"></div>
-
-    </header>
-    <main>
-        <section>
-            <div class="questions">
-                <p>questions</p>
-            </div>
-        </section>
-        <section>
-            <div class="answers">
-                <ul>1</ul>
-                <ul>2</ul>
-                <ul>3</ul>
-                <ul>4</ul>
-                <hr>
-            </div>
-        </section>
-    </main>
+    <section id="startquiz">
+        <button id="start">!START QUIZ!</button>
+        <a href="./score.html">
+            <button>HIGHSCORE</button>
+        </a>
+    </section>
+    <section id="quizsect">
+        <div id="time"></div>
+        <div id="quiz">
+            <div id="question"></div>
+            <button id="answerA"></button>
+            <button id="answerB"></button>
+            <button id="answerC"></button>
+            <button id="answerD"></button>
+        </div>
+    </section>
     <script src="./assets/script.js"></script>
 </body>
 
