added more functions in script

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <button id="answerD"></button>
         </div>
     </section>
+    <section id="end">
+        <div id="score"></div>
+    </section>
     <script src="./assets/script.js"></script>
 </body>
 
