added local storage functions

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     </section>
     <section id="end">
         <div id="score"></div>
+        <form id="userForm">
+            <label>ENTER USER INITIALS</label>
+            <input id="inits">
+        </form>
     </section>
     <script src="./assets/script.js"></script>
 </body>
